--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-good morning
-Helllo World
+<html>
+  <body>
+    <div>
+      <h1>Hello, It's Kevin</h1>
+      <p>I love programming</p>
+    </div>
+  </body>
+</html>
