I have changed the index.html file

--- a/index.html
+++ b/index.html
@@ -1,8 +1,98 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PORTFOLIO</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
-    <div>
-      <h1>Hello, It's Kevin</h1>
-      <p>I love programming</p>
+    <div class="container">
+      <!-- Landing Section -->
+      <div class="landing-section" id="home">
+        <header class="header">
+          <h1 class="logo">NK</h1>
+          <nav class="nav-menu">
+            <ul class="menu-items">
+              <li><a href="#Home">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#skills">Skills</a></li>
+              <li><a href="#contact-me">Contact me</a></li>
+            </ul>
+          </nav>
+          <!-- The menu icon goes here  -->
+          <img class="menu-icon" src="" alt="">
+
+        </header>
+        <section class="hero-section">
+          <section class="name-description">
+            <h1 class="name">Nakayiza Kevina</h1>
+            <p class="description">
+              A Student of Metropolitan University Kampala, and Ablestate
+              pursuing a bachelors in Information Technology and a E-degree in
+              Software Development.
+            </p>
+            <button class="hire-me">Contact Me</button>
+          </section>
+          <section class="hero-image">
+            <img
+              src="/Images/Kevina photo 2.jpeg"
+              alt="Nakayiza Kevina Photo"
+              width="500px"
+              height="500px"
+            />
+          </section>
+        </section>
+      </div>
+      <!-- About me section -->
+      <section class="about-me" id="about">
+        <div class="about-heading-container">
+          <h1 class="about-me-heading">About me</h1>
+        </div>
+        <div class="about-description-container">
+          <p class="about-me-description">
+            My name is Nakayiza Kevina, am a student of Metropolitan
+            international University pursing a bacholers degree in Information
+            Technology am good at frontend. <br /><br />
+            My name is Nakayiza Kevina, am a student of Metropolitan
+            international University pursing a bacholers degree in Information
+            Technology am good at frontend.
+          </p>
+        </div>
+      </section>
+      <!-- Skills section -->
+      <section class="skills-section" id="skills">
+        <div class="skill-heading-container">
+          <h1 class="skills-heading">My Skills</h1>
+        </div>
+        <div class="skills-container">
+          <div class="skill-container">
+            <div>HTML</div>
+            <div>CSS</div>
+          </div>
+          <div class="skill-container">
+            <div>BOOTSTRAP</div>
+            <div>JAVASCRIPT</div>
+          </div>
+        </div>
+      </section>
+      <!-- Contact us section -->
+      <div id="contact-me" class="contact-me">
+        <h1 class="contactme-heading">Contact me</h1>
+        <p class="contactme-description" style="font-size: 1.2rem;">
+          Kindly reach out to me via the following
+        </p>
+        <div class="contactme-list-container">
+          <ul class="contactme-list">
+            <li><a href="">Twitter</a></li>
+            <li><a href="">Instagram</a></li>
+            <li><a href="">GitHub</a></li>
+            <li><a href="">LinkedIn</a></li>
+          </ul>
+        </div>
+        <div></div>
+      </div>
     </div>
   </body>
 </html>
