I have added images to my skills section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PORTFOLIO</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
@@ -22,15 +22,15 @@
             </ul>
           </nav>
           <!-- The menu icon goes here  -->
-          <img class="menu-icon" src="" alt="">
+          <img class="menu-icon" src="./image/Menu img.svg" alt="">
 
         </header>
         <section class="hero-section">
           <section class="name-description">
             <h1 class="name">Nakayiza Kevina</h1>
             <p class="description">
-              A Student of Metropolitan University Kampala, and Ablestate
-              pursuing a bachelors in Information Technology and a E-degree in
+              A Student of Metropolitan International University and Ablestate Creatives
+              pursuing a bachelors degree in Information Technology and a E-degree in
               Software Development.
             </p>
             <button class="hire-me">Contact Me</button>
@@ -53,10 +53,10 @@
         <div class="about-description-container">
           <p class="about-me-description">
             My name is Nakayiza Kevina, am a student of Metropolitan
-            international University pursing a bacholers degree in Information
+            International University pursing a bacholers degree in Information
             Technology am good at frontend. <br /><br />
             My name is Nakayiza Kevina, am a student of Metropolitan
-            international University pursing a bacholers degree in Information
+            International University pursing a bacholers degree in Information
             Technology am good at frontend.
           </p>
         </div>
@@ -68,12 +68,12 @@
         </div>
         <div class="skills-container">
           <div class="skill-container">
-            <div>HTML</div>
-            <div>CSS</div>
+            <div><img class="images"  src="./image/HTML img.png" alt="HTML"></div>
+            <div><img class="images" src="./image/CSS img.png" alt="CSS"></div>
           </div>
           <div class="skill-container">
-            <div>BOOTSTRAP</div>
-            <div>JAVASCRIPT</div>
+            <div><img class="images" src="./image/Bootstrap img.jpeg" alt="Bootstrap"></div>
+            <div><img class="images" src="./image/Javascript img.png" alt="javascript"></div>
           </div>
         </div>
       </section>
