I have added links to my social media acc.

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         </p>
         <div class="contactme-list-container">
           <ul class="contactme-list">
-            <li><a href="">Twitter</a></li>
+            <li><a href="https://twitter.com/nakayizakevina">Twitter</a></li>
             <li><a href="">Instagram</a></li>
-            <li><a href="">GitHub</a></li>
-            <li><a href="">LinkedIn</a></li>
+            <li><a href="https://github.com/nakayizakevina">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/nakayizakevina/">LinkedIn</a></li>
           </ul>
         </div>
         <div></div>
